--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.2.0",
     "react-slick": "^0.25.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.2",
