--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
@@ -27,7 +29,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts build",
-    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
