Modify homepage field in package.json to heroku url

--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
     "gh-pages": "^2.1.1",
     "react-alice-carousel": "^1.17.0"
   },
-  "homepage": "."
+  "homepage": "https://dscnus-frontend.herokuapp.com"
 }
