--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
+    "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-html-parser": "^2.0.2",
     "react-responsive-carousel": "^3.1.51",
