--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "deploy": "gh-pages -d build",
     "start": "node server.js",
     "build": "react-scripts build",
-    "dev": "node server.js",
+    "dev": "yarn react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
