--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
     "react-html-parser": "^2.0.2",
+    "react-iframe": "^1.8.0",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
