--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "react": "^16.12.0",
     "react-burger-menu": "^2.6.13",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-html-parser": "^2.0.2",
     "react-iframe": "^1.8.0",
     "react-responsive-carousel": "^3.1.51",
