--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-ga": "^2.7.0",
     "react-html-parser": "^2.0.2",
     "react-iframe": "^1.8.0",
+    "react-loading": "^2.0.3",
     "react-responsive-carousel": "^3.1.51",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
