--- a/package.json
+++ b/package.json
@@ -58,5 +58,5 @@
     "gh-pages": "^2.2.0",
     "react-alice-carousel": "^1.19.3"
   },
-  "homepage": "https://dscnus-frontend.herokuapp.com"
+  "homepage": "http://dsc-nus.github.io/dscnus"
 }
