--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-html-parser": "^2.0.2",
     "react-iframe": "^1.8.0",
     "react-loading": "^2.0.3",
+    "react-pdf": "^5.2.0",
     "react-responsive-carousel": "^3.2.7",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
