Fix h4g judge shawn bio & pdf renderer loading

--- a/package.json
+++ b/package.json
@@ -60,5 +60,5 @@
     "gh-pages": "^2.2.0",
     "react-alice-carousel": "^1.19.3"
   },
-  "homepage": "http://dsc-nus.github.io/dscnus"
+  "homepage": "http://dsc-nus.github.io/"
 }
